--- a/les-avantages-de-mon-adhesion.html
+++ b/les-avantages-de-mon-adhesion.html
@@ -7,6 +7,38 @@
       Les avantages de mon adhésion | FO Transport 13 - Votre syndicat Force
       Ouvrière dans le domaine du transport et de la logistique à Marseille
     </title>
+    <meta
+      name="description"
+      content="Découvrez les nombreux avantages offerts par la carte Force Ouvrière : déductions fiscales, assistance juridique, maintien de salaire en cas de grève, formations syndicales, et bien plus. Rejoignez FO Transport 13 dès aujourd'hui !"
+    />
+
+    <meta
+      name="keywords"
+      content="Force Ouvrière, FO Transport 13, avantages adhésion, déduction fiscale, assistance juridique, grève, formations syndicales, défense des consommateurs, syndicat transport, logistique"
+    />
+
+    <meta
+      property="og:image"
+      content="https://fo-transport13.fr/assets/img/hero.webp"
+    />
+    <meta
+      property="og:image:alt"
+      content="Carte des avantages FO Transport 13"
+    />
+
+    <meta
+      property="og:title"
+      content="Les avantages de mon adhésion - FO Transport 13"
+    />
+
+    <meta
+      property="og:description"
+      content="Avec FO Transport 13, bénéficiez de nombreux avantages exclusifs : assistance juridique, formations, soutien en cas de grève, et bien plus encore. Rejoignez-nous !"
+    />
+    <link
+      rel="canonical"
+      href="https://fo-transport13.fr/les-avantages-de-mon-adhesion.html"
+    />
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="icon" href="./assets/img/logo-fo-transport-13.png" />
     <link
@@ -180,8 +212,50 @@
           <h1>Les avantages de mon adhésion</h1>
         </div>
       </section>
-      <section class="section"></section>
-
+      <section class="intro">
+        <p>
+          Être membre de FO Transport 13, c'est bénéficier d'une multitude
+          d'avantages pour vous accompagner dans votre vie professionnelle et
+          personnelle. Voici tout ce que votre adhésion vous apporte (sous
+          condition d'être à jour de sa cotisation de plus d'un an) :
+        </p>
+      </section>
+      <section class="section">
+        <h2>Impôts</h2>
+        <p>
+          Une déduction d’impôts de 66% sur le prix de la carte (Sur 100€ payés
+          à l’année 66€ sont remboursés en crédit d’impôts) sans condition
+          d’ancienneté.
+        </p>
+        <h2>Juridique</h2>
+        <ul>
+          <li>Consultation gratuite chez l’un de nos avocats</li>
+          <li>Tarif préférentiel chez nos avocats pour litige salarial</li>
+          <li>
+            Possibilité de prise en charge des frais de Cour de Cassation par la
+            Fédération FO
+          </li>
+          <li>
+            Informations juridiques (Code du Travail – Convention Collective)
+            par email
+          </li>
+        </ul>
+        <h2>Grève</h2>
+        <p>
+          Possibilité de maintien de votre salaire pendant les grèves à hauteur
+          de 66% par la Confédération et la Fédération FO.
+        </p>
+        <h2>Formation</h2>
+        <p>
+          12 jours de congés supplémentaires pour suivre les formations FO pris
+          en charge par la Confédération FO.
+        </p>
+        <h2>Consommation</h2>
+        <p>
+          Service de la Défense des Consommateurs gratuit AFOC (pour tous
+          litiges à la consommation)
+        </p>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
