--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -61,7 +61,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="pages-droits">
+  <body id="fiches-infos">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -224,7 +224,113 @@
           <h1>Je suis élu(e) au CSE</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="intro">
+        <p>
+          Être élu(e) au Comité Social et Économique (CSE) signifie jouer un
+          rôle clé dans la représentation des salariés et le dialogue social au
+          sein de votre entreprise. Que vous soyez élu(e) titulaire ou
+          suppléant(e), vos missions sont déterminantes pour la défense des
+          droits et des intérêts des salariés.
+        </p>
+      </section>
+      <section class="section">
+        <h2>Les deux types d’élus au CSE</h2>
+        <div id="types-elus">
+          <div>
+            <h3>1. Élu(e) titulaire du CSE</h3>
+            <p>
+              En tant que titulaire, vous êtes un représentant de plein droit.
+              Vous avez la responsabilité de :
+            </p>
+            <ul>
+              <li>
+                Participer activement aux réunions du CSE avec un droit de vote
+                sur toutes les décisions prises.
+              </li>
+              <li>
+                Représenter les salariés auprès de la direction en exprimant
+                leurs préoccupations, leurs revendications, et leurs
+                propositions.
+              </li>
+              <li>
+                Jouer un rôle essentiel dans les consultations sur les
+                conditions de travail, la santé, la sécurité, et les décisions
+                économiques.
+              </li>
+              <li>
+                Contribuer au développement des activités sociales et
+                culturelles de l’entreprise.
+              </li>
+            </ul>
+            <p>
+              Vous pouvez télécharger la fiche complète expliquant vos missions
+              et responsabilités en cliquant ci-dessous :
+            </p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis elu(e) TITULAIRE au CSE.pdf"
+                download="Je suis elu(e) titulaire au CSE.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+          <div>
+            <h3>2. Élu(e) suppléant(e) du CSE</h3>
+            <p>
+              En tant que suppléant(e), vous avez un rôle complémentaire aux
+              titulaires. Vos missions incluent :
+            </p>
+            <ul>
+              <li>
+                Assister aux réunions du CSE en cas d’absence d’un titulaire.
+              </li>
+              <li>
+                Participer activement au suivi des dossiers pour être prêt(e) à
+                remplacer un titulaire à tout moment.
+              </li>
+              <li>
+                Soutenir les titulaires dans la préparation des consultations et
+                des négociations importantes.
+              </li>
+              <li>
+                Collaborer avec les titulaires pour garantir une représentation
+                continue et efficace des salariés.
+              </li>
+            </ul>
+            <p>
+              Vous pouvez télécharger la fiche complète expliquant vos missions
+              et responsabilités en cliquant ci-dessous :
+            </p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis elu(e) SUPPLEANT au CSE.pdf"
+                download="Je suis elu(e) suppleant au CSE.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section id="ressources" class="section">
+        <h2>Ressources à votre disposition</h2>
+        <p>
+          En tant qu’élu(e) au CSE, vous avez accès à plusieurs outils pour vous
+          aider à remplir vos missions :
+        </p>
+        <ul>
+          <li>Formations spécifiques pour les représentants du CSE.</li>
+          <li>Assistance juridique en cas de litige.</li>
+          <li>Documents et rapports fournis par la direction.</li>
+          <li>Conseils et soutien de la part du syndicat FO Transport 13.</li>
+        </ul>
+        <p>
+          N’hésitez pas à contacter notre syndicat pour toute question ou pour
+          bénéficier d’un accompagnement personnalisé dans vos fonctions.
+        </p>
+      </section>
 
       <section class="cta">
         <div class="overlay">
