--- a/medias.html
+++ b/medias.html
@@ -180,6 +180,9 @@
           <h1>Medias</h1>
         </div>
       </section>
+      <section class="intro">
+        <p>AUCUN CONTENU DISPONIBLE ACTUELLEMENT</p>
+      </section>
       <section class="section"></section>
 
       <section class="cta">
