--- a/plan-du-site.html
+++ b/plan-du-site.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="plan-du-site">
+  <body id="page-avantages-adhesion">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -180,7 +180,105 @@
           <h1>Plan du site</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="intro">
+        <p>
+          Bienvenue sur le plan du site de FO Transport 13. Retrouvez ici une
+          vue d’ensemble de toutes les pages disponibles sur notre site pour
+          naviguer facilement vers les contenus qui vous intéressent.
+        </p>
+      </section>
+      <section class="section">
+        <h2>1. Accueil</h2>
+        <ul>
+          <li>
+            <a href="./index.html"> Page d'accueil </a>
+          </li>
+        </ul>
+        <h2>2. Nous connaître</h2>
+        <ul>
+          <li>
+            <a href="./nous-connaitre.html"> Nous connaître </a>
+          </li>
+        </ul>
+        <h2>3. Vos droits</h2>
+        <ul>
+          <li>
+            <a href="./vos-droits.html"> Vos droits </a>
+          </li>
+          <li>
+            <a href="./les-avantages-de-mon-adhesion.html">
+              Les avantages de mon adhésion
+            </a>
+          </li>
+          <li>
+            <a href="./je-suis-elu-e-au-cse.html"> Je suis élu(e) au CSE </a>
+          </li>
+          <li>
+            <a href="./je-suis-mandate-e-par-mon-syndicat.html">
+              Je suis mandaté(e) par mon syndicat
+            </a>
+          </li>
+          <li>
+            <a href="./je-suis-mandate-e-par-mon-union-departementale.html">
+              Je suis mandaté(e) par mon Union Départementale
+            </a>
+          </li>
+        </ul>
+        <h2>4. Outils</h2>
+        <ul>
+          <li>
+            <a href="./outils.html"> Outils </a>
+          </li>
+          <li><a href="./faq.html">FAQ</a></li>
+        </ul>
+        <h2>5. Médias</h2>
+        <ul>
+          <li>
+            <a href="./medias.html">Médias</a>
+          </li>
+        </ul>
+        <h2>6. Nous contacter</h2>
+        <ul>
+          <li>
+            <a href="./nous-contacter.html"> Nous contacter </a>
+          </li>
+        </ul>
+        <h2>7. Adhésion et Connexion</h2>
+        <ul>
+          <li>
+            <a href="./je-souhaite-adherer.html"> Je souhaite adhérer </a>
+          </li>
+          <li>
+            <a href="./bulletin-adhesion-simple.html">
+              Bulletin d’adhésion simple
+            </a>
+          </li>
+          <li>
+            <a href="./bulletin-adhesion-juridique.html">
+              Bulletin d’adhésion juridique
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://syndicat-departemental-force-ouvriere-transports--6618ac08c732b.assoconnect.com/contacts/login"
+              target="_blank"
+              >Connexion à l'espace adhérent (lien externe)</a
+            >
+          </li>
+        </ul>
+        <h2>8. Mentions légales et politique de confidentialité</h2>
+        <ul>
+          <li>
+            <a href="./mentions-legales.html"> Mentions légales </a>
+          </li>
+          <li>
+            <a href="./confidentialite.html"> Confidentialité </a>
+          </li>
+          <li>
+            <a href="./cgu.html"> Conditions Générales d’Utilisation (CGU) </a>
+          </li>
+        </ul>
+      </section>
 
       <section class="cta">
         <div class="overlay">
