--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -314,6 +314,42 @@
         </div>
       </section>
 
+      <section class="section">
+        <h2>Je suis désigné(e) CSSCT</h2>
+        <p>
+          En tant que membre de la Commission Santé, Sécurité et Conditions de
+          Travail (CSSCT), vous jouez un rôle essentiel dans l’analyse, la
+          prévention, et la gestion des risques professionnels au sein de
+          l’entreprise.
+        </p>
+        <ul>
+          <li>
+            Analyser les situations de travail pour identifier et prévenir les
+            risques professionnels.
+          </li>
+          <li>Participer aux enquêtes en cas d’accidents ou incidents.</li>
+          <li>
+            Collaborer avec les élus du CSE pour améliorer les conditions de
+            travail.
+          </li>
+          <li>
+            Proposer des actions concrètes pour garantir la sécurité et la santé
+            des salariés.
+          </li>
+        </ul>
+        <p>
+          Vous pouvez télécharger la fiche complète expliquant vos missions et
+          responsabilités en cliquant ci-dessous :
+        </p>
+        <button class="buttonIcon">
+          <a
+            href="./assets/docs/fiches-infos/Je suis désigné CSSCT.pdf"
+            download="Je suis désigné(e) CSSCT.pdf"
+            ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la fiche</a
+          >
+        </button>
+      </section>
+
       <section id="ressources" class="section">
         <h2>Ressources à votre disposition</h2>
         <p>
