--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -235,7 +235,7 @@
       </section>
       <section class="section">
         <h2>Les deux types d’élus au CSE</h2>
-        <div id="types-elus">
+        <div id="types-elus" class="types-elus2">
           <div>
             <h3>1. Élu(e) titulaire du CSE</h3>
             <p>
