--- a/je-suis-mandate-e-par-mon-union-departementale.html
+++ b/je-suis-mandate-e-par-mon-union-departementale.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="pages-droits">
+  <body id="fiches-infos">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -181,8 +181,123 @@
           <h1>Je suis mandaté(e) par mon Union Départementale</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="intro">
+        <p>
+          En tant que mandaté(e) par votre Union Départementale, vous jouez un
+          rôle essentiel dans la défense des droits des salariés et dans la
+          représentation syndicale. Découvrez vos missions principales et les
+          ressources mises à votre disposition.
+        </p>
+      </section>
+      <section class="section">
+        <h2>Les rôles des mandaté(e)s par l'Union Départementale</h2>
+        <div id="types-elus" class="types-elus3">
+          <div>
+            <h3>1. Conseiller Prud’homal</h3>
+            <p>
+              Les conseillers prud’homaux représentent les salariés dans les
+              litiges relatifs au droit du travail. Vos principales missions
+              incluent :
+            </p>
+            <ul>
+              <li>
+                Représenter et défendre les salariés devant le Conseil de
+                Prud’hommes.
+              </li>
+              <li>
+                Participer aux audiences pour juger des litiges liés aux
+                contrats de travail.
+              </li>
+              <li>
+                Garantir l’application des règles de droit dans le cadre des
+                relations de travail.
+              </li>
+            </ul>
+            <p>Téléchargez la fiche détaillant vos missions :</p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis désigné CONSEILLER PRUD'HOMMES.pdf"
+                download="Je suis désigné conseiller prud’homal.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+          <div>
+            <h3>2. Représentant Syndical</h3>
+            <p>
+              En tant que représentant syndical, vous êtes un acteur clé dans le
+              dialogue social au sein des grandes instances de décision :
+            </p>
+            <ul>
+              <li>
+                Représenter le syndicat au sein des comités d’entreprise ou
+                autres instances.
+              </li>
+              <li>
+                Participer aux discussions sur les grandes orientations
+                économiques et sociales.
+              </li>
+              <li>
+                Porter la voix des salariés dans les prises de décisions
+                stratégiques.
+              </li>
+            </ul>
+            <p>Téléchargez la fiche explicative :</p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis nommé REPRESENTANT SYNDICAL.pdf"
+                download="Je suis nommé représentant syndical.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+          <div>
+            <h3>3. Conseiller Salarié</h3>
+            <p>
+              Les conseillers salariés interviennent pour assister les salariés
+              lors d’entretiens préalables à des licenciements :
+            </p>
+            <ul>
+              <li>Assister et conseiller le salarié lors de l’entretien.</li>
+              <li>
+                Garantir le respect des droits du salarié durant la procédure.
+              </li>
+              <li>
+                Intervenir en tant qu’interlocuteur entre l’employeur et le
+                salarié.
+              </li>
+            </ul>
+            <p>Téléchargez la fiche complète :</p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis conseiller salarié.pdf"
+                download="Je suis conseiller salarié.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+        </div>
+      </section>
 
+      <section id="ressources" class="section">
+        <h2>Ressources à votre disposition</h2>
+        <p>FO Transport 13 vous accompagne dans vos missions grâce à :</p>
+        <ul>
+          <li>Des formations spécialisées pour chaque rôle.</li>
+          <li>Un soutien juridique et administratif.</li>
+          <li>Des documents et guides pratiques pour vous orienter.</li>
+          <li>
+            L’accès à un réseau de mandataires pour partager vos expériences.
+          </li>
+        </ul>
+        <p>
+          N’hésitez pas à contacter notre syndicat pour toute question ou pour
+          bénéficier d’un accompagnement personnalisé dans vos fonctions.
+        </p>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
