--- a/je-suis-mandate-e-par-mon-syndicat.html
+++ b/je-suis-mandate-e-par-mon-syndicat.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="pages-droits">
+  <body id="fiches-infos">
     <header>
       <div class="barre-sup">
         <div class="menu-barre-sup">
@@ -181,8 +181,86 @@
           <h1>Je suis mandaté(e) par mon syndicat</h1>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="intro">
+        <p>
+          En tant que mandaté(e) par votre syndicat, vous jouez un rôle crucial
+          dans la défense des droits des salariés, la négociation collective, et
+          la représentation syndicale au sein de l’entreprise. Voici un aperçu
+          des principales fonctions liées à votre mandat.
+        </p>
+      </section>
+      <section class="section">
+        <h2>Les rôles de mandaté(e)s syndicaux</h2>
+        <div id="types-elus" class="types-elus2">
+          <div>
+            <h3>1. Délégué Syndical</h3>
+            <p>
+              En tant que délégué syndical, vous êtes le porte-parole du
+              syndicat auprès de l'employeur. Vos missions incluent :
+            </p>
+            <ul>
+              <li>
+                Représenter le syndicat dans les négociations avec la direction.
+              </li>
+              <li>Défendre les intérêts collectifs des salariés.</li>
+              <li>Suivre et proposer des accords d’entreprise.</li>
+            </ul>
+            <p>
+              Téléchargez la fiche complète pour en savoir plus sur vos missions
+              :
+            </p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis nommé DELEGUE SYNDICAL.pdf"
+                download="Je suis nommé délégué syndical.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+          <div>
+            <h3>2. Représentant de Section Syndicale</h3>
+            <p>
+              Le représentant de section syndicale (RSS) a un rôle pivot pour
+              structurer et renforcer la présence syndicale :
+            </p>
+            <ul>
+              <li>Assurer le lien entre le syndicat et les salariés.</li>
+              <li>
+                Organiser des actions pour faire avancer les revendications
+                syndicales.
+              </li>
+              <li>Participer à la préparation des négociations collectives.</li>
+            </ul>
+            <p>Téléchargez la fiche complète pour plus de détails :</p>
+            <button class="buttonIcon">
+              <a
+                href="./assets/docs/fiches-infos/Je suis nommé REPRESENTANT DE SECTION SYNDICALE.pdf"
+                download="Je suis nommé représentant de section syndicale.pdf"
+                ><i class="fa-solid fa-file-arrow-down"></i>Télécharger la
+                fiche</a
+              >
+            </button>
+          </div>
+        </div>
+      </section>
 
+      <section id="ressources" class="section">
+        <h2>Ressources à votre disposition</h2>
+        <p>
+          FO Transport 13 vous propose des outils pour réussir vos missions :
+        </p>
+        <ul>
+          <li>Formations adaptées pour mandatés syndicaux.</li>
+          <li>Soutien juridique en cas de litiges ou de négociations.</li>
+          <li>Accès à des documents pour mieux défendre vos collègues.</li>
+          <li>Conseils et accompagnement personnalisé.</li>
+        </ul>
+        <p>
+          N’hésitez pas à contacter notre syndicat pour toute question ou pour
+          bénéficier d’un accompagnement personnalisé dans vos fonctions.
+        </p>
+      </section>
       <section class="cta">
         <div class="overlay">
           <h2>
