--- a/je-suis-elu-e-au-cse.html
+++ b/je-suis-elu-e-au-cse.html
@@ -341,7 +341,7 @@
           Vous pouvez télécharger la fiche complète expliquant vos missions et
           responsabilités en cliquant ci-dessous :
         </p>
-        <button class="buttonIcon">
+        <button class="buttonIcon cssct">
           <a
             href="./assets/docs/fiches-infos/Je suis désigné CSSCT.pdf"
             download="Je suis désigné(e) CSSCT.pdf"
