--- a/confidentialite.html
+++ b/confidentialite.html
@@ -160,6 +160,24 @@
                   </ul>
                 </div>
               </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./les-avantages-de-mon-adhesion.html"
+                  >Les avantages de mon adhésion</a
+                >
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-elu-e-au-cse.html">Je suis élu(e) au CSE</a>
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-mandate-e-par-mon-syndicat.html"
+                  >Je suis mandaté(e) par mon syndicat</a
+                >
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-mandate-e-par-mon-union-departementale.html"
+                  >Je suis mandaté(e) par mon UD</a
+                >
+              </li>
               <li onmouseover="openSousNav3()" onmouseleave="closeSousNav3()">
                 <a href="./outils.html"
                   >Outils <i class="fa-solid fa-chevron-down"></i
