--- a/medias.html
+++ b/medias.html
@@ -126,6 +126,24 @@
                   </ul>
                 </div>
               </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./les-avantages-de-mon-adhesion.html"
+                  >Les avantages de mon adhésion</a
+                >
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-elu-e-au-cse.html">Je suis élu(e) au CSE</a>
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-mandate-e-par-mon-syndicat.html"
+                  >Je suis mandaté(e) par mon syndicat</a
+                >
+              </li>
+              <li class="responsive-li sous-nav-responsive">
+                <a href="./je-suis-mandate-e-par-mon-union-departementale.html"
+                  >Je suis mandaté(e) par mon UD</a
+                >
+              </li>
               <li onmouseover="openSousNav3()" onmouseleave="closeSousNav3()">
                 <a href="./outils.html"
                   >Outils <i class="fa-solid fa-chevron-down"></i
@@ -143,7 +161,7 @@
               </li>
               <li class="responsive-li"><a href="./faq.html">FAQ</a></li>
 
-              <li><a href="./medias.html">Médias</a></li>
+              <!-- <li><a href="./medias.html">Médias</a></li> -->
               <li><a href="./nous-contacter.html">Nous contacter</a></li>
               <li class="responsive-li button-menu">
                 <a href="./je-souhaite-adherer.html">Adhésion</a>
