Correction imgs qui ne s'affichent pas sur la page Outils06/01/2025 05:30

--- a/outils.html
+++ b/outils.html
@@ -248,7 +248,7 @@
                 download="Guide Prévoyance-les clés pour mieux s'y retrouver.pdf"
               >
                 <img
-                  src="./assets/img/2024_03-Guide-Prévoyance les clés pour mieux s'y retrouver.png"
+                  src="./assets/img/2024_03-Guide-Prevoyance.png"
                   alt="Guide Prévoyance"
                 />
                 Guide Prévoyance
@@ -278,7 +278,7 @@
                 download="Je suis désigné CONSEILLER PRUD'HOMMES.pdf"
               >
                 <img
-                  src="./assets/img/Je suis désigné CONSEILLER PRUD'HOMMES.png"
+                  src="./assets/img/CONSEILLER PRUDHOMMES.png"
                   alt="Conseiller prud'hommes"
                 />
                 Conseiller Prud'hommes
@@ -288,7 +288,7 @@
                 download="Je suis désigné CONSEILLER SALARIE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis désigné CONSEILLER SALARIE.png"
+                  src="./assets/img/CONSEILLER SALARIE.png"
                   alt="Conseiller salarie"
                 />
                 Conseiller Salarié
@@ -297,10 +297,7 @@
                 href="./assets/docs/fiches-infos/Je suis désigné CSSCT.pdf"
                 download="Je suis désigné CSSCT.pdf"
               >
-                <img
-                  src="./assets/img/Je suis désigné CSSCT.png"
-                  alt="Désigné CSSCT"
-                />
+                <img src="./assets/img/CSSCT.png" alt="Désigné CSSCT" />
                 Désigné CSSCT
               </a>
               <a
@@ -308,7 +305,7 @@
                 download="Je suis elu(e) SUPPLEANT au CSE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis elu(e) SUPPLEANT au CSE.png"
+                  src="./assets/img/SUPPLEANT au CSE.png"
                   alt="Suppléant CSE"
                 />
                 Suppléant CSE
@@ -318,7 +315,7 @@
                 download="Je suis elu(e) TITULAIRE au CSE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis elu(e) TITULAIRE au CSE.png"
+                  src="./assets/img/TITULAIRE au CSE.png"
                   alt="Titulaire CSE"
                 />
                 Titulaire CSE
@@ -328,7 +325,7 @@
                 download="Je suis nommé DELEGUE SYNDICAL.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé DELEGUE SYNDICAL.png"
+                  src="./assets/img/DELEGUE SYNDICAL.png"
                   alt="Délégué syndical"
                 />
                 Délégué syndical
@@ -338,7 +335,7 @@
                 download="Je suis nommé REPRESENTANT DE SECTION SYNDICALE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé REPRESENTANT DE SECTION SYNDICALE.png"
+                  src="./assets/img/REPRESENTANT DE SECTION SYNDICALE.png"
                   alt="Représentant de section syndical"
                 />
                 Représentant de section syndical
@@ -348,7 +345,7 @@
                 download="Je suis nommé REPRESENTANT SYNDICAL.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé REPRESENTANT SYNDICAL.png"
+                  src="./assets/img/REPRESENTANT SYNDICAL.png"
                   alt="Représentant syndical"
                 />
                 Représentant syndical
@@ -434,7 +431,7 @@
                 download="Charte du Délégué Syndical.pdf"
               >
                 <img
-                  src="./assets/img/Charte du Délégué Syndical.png"
+                  src="./assets/img/Charte du Delegue Syndical.png"
                   alt="Charte du Délégué Syndical"
                 />
                 Charte du Délégué Syndical
@@ -496,7 +493,7 @@
                 download="Guide Prévoyance - les clés pour mieux s'y retrouver.pdf"
               >
                 <img
-                  src="./assets/img/2024_03-Guide-Prévoyance les clés pour mieux s'y retrouver.png"
+                  src="./assets/img/2024_03-Guide-Prevoyance.png"
                   alt="Guide Prévoyance"
                 />
                 Guide Prévoyance
@@ -527,11 +524,28 @@
             <h2>Fiches infos</h2>
             <div class="container-docs">
               <a
+                href="./assets/docs/essentiels/Avantages-de-la-carte.pdf"
+                download="Avantages-de-la-carte.pdf"
+              >
+                <img
+                  src="./assets/img/Avantages-de-la-carte.png"
+                  alt="Avantages de la carte"
+                />
+                Avantages de la carte
+              </a>
+              <a
+                href="./assets/docs/essentiels/Contacts.pdf"
+                download="Contacts.pdf"
+              >
+                <img src="./assets/img/Contacts.png" alt="Contacts" />
+                Contacts
+              </a>
+              <a
                 href="./assets/docs/fiches-infos/Je suis désigné CONSEILLER PRUD'HOMMES.pdf"
                 download="Je suis désigné CONSEILLER PRUD'HOMMES.pdf"
               >
                 <img
-                  src="./assets/img/Je suis désigné CONSEILLER PRUD'HOMMES.png"
+                  src="./assets/img/CONSEILLER PRUDHOMMES.png"
                   alt="Conseiller prud'hommes"
                 />
                 Conseiller Prud'hommes
@@ -541,7 +555,7 @@
                 download="Je suis désigné CONSEILLER SALARIE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis désigné CONSEILLER SALARIE.png"
+                  src="./assets/img/CONSEILLER SALARIE.png"
                   alt="Conseiller salarie"
                 />
                 Conseiller Salarié
@@ -550,10 +564,7 @@
                 href="./assets/docs/fiches-infos/Je suis désigné CSSCT.pdf"
                 download="Je suis désigné CSSCT.pdf"
               >
-                <img
-                  src="./assets/img/Je suis désigné CSSCT.png"
-                  alt="Désigné CSSCT"
-                />
+                <img src="./assets/img/CSSCT.png" alt="Désigné CSSCT" />
                 Désigné CSSCT
               </a>
               <a
@@ -561,7 +572,7 @@
                 download="Je suis elu(e) SUPPLEANT au CSE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis elu(e) SUPPLEANT au CSE.png"
+                  src="./assets/img/SUPPLEANT au CSE.png"
                   alt="Suppléant CSE"
                 />
                 Suppléant CSE
@@ -571,7 +582,7 @@
                 download="Je suis elu(e) TITULAIRE au CSE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis elu(e) TITULAIRE au CSE.png"
+                  src="./assets/img/TITULAIRE au CSE.png"
                   alt="Titulaire CSE"
                 />
                 Titulaire CSE
@@ -581,7 +592,7 @@
                 download="Je suis nommé DELEGUE SYNDICAL.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé DELEGUE SYNDICAL.png"
+                  src="./assets/img/DELEGUE SYNDICAL.png"
                   alt="Délégué syndical"
                 />
                 Délégué syndical
@@ -591,7 +602,7 @@
                 download="Je suis nommé REPRESENTANT DE SECTION SYNDICALE.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé REPRESENTANT DE SECTION SYNDICALE.png"
+                  src="./assets/img/JREPRESENTANT DE SECTION SYNDICALE.png"
                   alt="Représentant de section syndical"
                 />
                 Représentant de section syndical
@@ -601,7 +612,7 @@
                 download="Je suis nommé REPRESENTANT SYNDICAL.pdf"
               >
                 <img
-                  src="./assets/img/Je suis nommé REPRESENTANT SYNDICAL.png"
+                  src="./assets/img/REPRESENTANT SYNDICAL.png"
                   alt="Représentant syndical"
                 />
                 Représentant syndical
@@ -702,7 +713,7 @@
                 download="Charte du Délégué Syndical.pdf"
               >
                 <img
-                  src="./assets/img/Charte du Délégué Syndical.png"
+                  src="./assets/img/Charte du Delegue Syndical.png"
                   alt="Charte du Délégué Syndical"
                 />
                 Charte du Délégué Syndical
